# cellapp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: analyzer.cpp  analyzer.hpp  app.cpp  app.hpp  cell.hpp  cellapp.cpp  cellapp.hpp  celllabel.cpp  celllabel.hpp  cellmainwin.cpp  cellmainwin.hpp  celloptions.cpp  celloptions.hpp  cellresults.cpp  cellresults.hpp  converter.cpp  converter.hpp  imlabel.cpp  imlabel.hpp  main.cpp  mainwin.cpp  mainwin.hpp  optionswin.cpp  optionswin.hpp  segmentator.cpp  segmentator.hpp  types.hpp
src/util/: convert.cpp  convert.hpp
